various updates and modernizations